--- a/styles/main.css
+++ b/styles/main.css
@@ -46,7 +46,7 @@ body {
 }
 .info-container ul li {
   padding-left: 2rem;
-  background-image: url(/assets/images/icon-list.svg);
+  background-image: url(../assets/images/icon-list.svg);
   background-position: 0 0;
   background-size: 1.6rem 1.6rem;
   background-repeat: no-repeat;
@@ -104,7 +104,7 @@ form button:hover {
 }
 
 .image {
-  background-image: url(/assets/images/illustration-sign-up-desktop.svg);
+  background-image: url(../assets/images/illustration-sign-up-desktop.svg);
   height: 593px;
   width: 400px;
   background-position: center center;
@@ -155,7 +155,7 @@ form button:hover {
 .succes-img {
   width: 64px;
   height: 64px;
-  background-image: url(/assets/images/icon-success.svg);
+  background-image: url(../assets/images/icon-success.svg);
   margin-bottom: 40px;
 }
 
@@ -194,7 +194,7 @@ form button:hover {
     margin-bottom: 16px;
   }
   .image {
-    background-image: url(/assets/images/illustration-sign-up-mobile.svg);
+    background-image: url(../assets/images/illustration-sign-up-mobile.svg);
     width: 100%;
     height: 350px;
     background-size: cover;
