--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,29 +1,38 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@font-face {
+  font-family: Roboto;
+  src: url(/assets/fonts/roboto-bold-webfont.woff2) format('woff2'),
+       url(/assets/fonts/roboto-bold-webfont.woff) format('woff');
+  font-weight: 700;
+}
+@font-face {
+  font-family: Roboto;
+  src: url(/assets/fonts/roboto-regular-webfont.woff2) format('woff2'),
+       url(/assets/fonts/roboto-regular-webfont.woff) format('woff');
+  font-weight: 400;
+}
 
-$Tomato: hsl(4, 100%, 67%);
-$Dark-Slate-Grey: hsl(234, 29%, 20%);
-$Charcoal-Grey: hsl(235, 18%, 26%);
-$Grey: hsl(231, 7%, 60%);
-$White: hsl(0, 0%, 100%);
-$error-input: #FFE8E6;
+@import 'typography';
+@import 'variables';
+
+:root {
+  font-size: 16px;
+}
 
 *{
   padding: 0;
   margin: 0;
 }
-
-
+// -------------------------------------------------------
 body {
   background-color: $Dark-Slate-Grey;
-  font-family: Roboto, sans-serif;
 }
 .container {
   max-width: 1440px;
   height: 100vh;
   margin: auto;
+  padding: 0 20px;
   display: flex;
   justify-content: center;
-  padding: 0 20px;
 }
 .card {
   width: 928px;
@@ -33,17 +42,18 @@ body {
   padding: 24px 24px 24px 64px;
   border-radius: 30px;
   justify-content: space-between;
+  align-items: center;
+  box-sizing: border-box;
 }
 .info-container {
   color: $Dark-Slate-Grey;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  width: 45%;
   margin-right: 40px;
   h1 {
-    font-size: 56px;
-    font-weight: 700;
     margin-bottom: 21px;
-    margin-top: 94px;
   }
   ul {
     list-style-type: none;
@@ -68,10 +78,6 @@ body {
   display: flex;
   justify-content: space-between;
   margin-bottom: 12px;
-  span {
-    font-size: 12px;
-    font-weight: 700;
-  }
 }
 form {
   display: flex;
@@ -83,13 +89,11 @@ form {
     margin-bottom: 24px;
   }
   button {
-    padding: 20px 72px 20px 72px;
+    padding: 20px 60px 20px 60px;
     background-color: $Dark-Slate-Grey;
     color: $White;
     border: none;
-    border-radius: 10px;
-    font-weight: 700;
-    font-family: Roboto;
+    border-radius: 10px;    
   }
   button:hover {
     background: linear-gradient(270deg, #FF693E 0%, rgba(255, 105, 62, 0.00) 100%), #FF5478;
@@ -126,12 +130,9 @@ form {
   color: $Dark-Slate-Grey;
   border-radius: 30px;
   h1 {
-    font-size: 56px;
-    font-weight: 700;
     margin-bottom: 24px;
   }
   p {
-    line-height: 1.5;
     margin-bottom: 44px;
   }
   button{
@@ -140,8 +141,6 @@ form {
     color: $White;
     border: none;
     border-radius: 10px;
-    font-size: 14px;
-    font-weight: 700;
     transition: .3s;
   }
   button:hover {
@@ -149,9 +148,6 @@ form {
     transition: .3s;
     box-shadow: 0px 5px 20px #FF5478;
   }
-}
-.send-email {
-  font-weight: 700;
 }
 .succes-img {
   width: 64px;
@@ -162,118 +158,4 @@ form {
 .none {
   display: none;
 }
-
-
-
-@media screen and (max-width: 890px) {
-  .info-container {
-    justify-content: center;
-    h1 {
-      margin-top: 0;
-    }
-  }
-  .image {
-    height: 600px;
-    width: 400px;
-    background-size: cover;
-    border-radius: 20px;
-  }
-}
-@media screen and (max-width: 785px) {
-  .card {
-    flex-direction: column-reverse;
-    padding: 24px;
-    max-width: 500px;
-  }
-  .info-container {
-    margin: 0;
-    h1 {
-      margin-top: 30px;
-      font-size: 48px;
-    }
-    ul {
-      margin-bottom: 16px;
-    }
-  }
-  .image {
-    background-image: url(../assets/images/illustration-sign-up-mobile.svg);
-    width: 100%;
-    height: 350px;
-    background-size: cover;
-    border-radius: 20px;
-  }
-}
-@media screen and (max-width: 535px) {
-  .image {
-    height: 200px;
-  }
-  .succes-card {
-    max-width: 300px;
-    padding: 24px 32px 32px 24px;
-    h1 {
-      font-size: 32px;
-    }
-    p {
-      font-size: 14px;
-    }
-    button {
-      padding: 18px 20px;
-    }
-  }
-
-}
-@media screen and (max-width: 425px) {
-  .container {
-    padding: 0;
-    margin: auto;
-    height: 100%;
-  }
-  .card {
-    padding: 0;
-    margin: 0;
-    border-radius: 0;
-    justify-content: flex-end;
-  }
-  .image {
-    width: 100%;
-    height: 284px;
-    border-radius: 0 0 20px 20px;
-  }
-  .info-container {
-    margin: 0;
-    padding: 0px 22px 40px 22px;
-    font-size: 16px;
-    h1 {
-      margin-top: 36px;
-      font-size: 40px;
-    }
-    ul {
-      margin-bottom: 16px;
-    }
-  }
-  form {
-    button {
-      padding: 20px 48px 20px 48px;
-    }
-  }
-  .succes-card {
-    max-width: 100vw;
-    height: 100vh;
-    margin: 0;
-    border-radius: 0;
-    padding: 148px 22px 40px 22px;
-    h1 {
-      font-size: 40px;
-      margin-top: 35px;
-    }
-    p {
-      font-size: 18px;
-    }
-    .succes-img {
-      margin: 0;
-    }
-    button {
-      margin-top: auto;
-    }
-  }
-} 
+@import 'responsive';
