--- a/styles/main.css
+++ b/styles/main.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: Roboto;
-  src: url(/assets/fonts/roboto-bold-webfont.woff2) format("woff2"), url(/assets/fonts/roboto-bold-webfont.woff) format("woff");
+  src: url(../assets/fonts/roboto-bold-webfont.woff2) format("woff2"), url(../assets/fonts/roboto-bold-webfont.woff) format("woff");
   font-weight: 700;
 }
 @font-face {
   font-family: Roboto;
-  src: url(/assets/fonts/roboto-regular-webfont.woff2) format("woff2"), url(/assets/fonts/roboto-regular-webfont.woff) format("woff");
+  src: url(../assets/fonts/roboto-regular-webfont.woff2) format("woff2"), url(../assets/fonts/roboto-regular-webfont.woff) format("woff");
   font-weight: 400;
 }
 body {
