--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -1,3 +1,16 @@
+@font-face {
+  font-family: Roboto;
+  src: url(../assets/fonts/roboto-bold-webfont.woff2) format('woff2'),
+       url(../assets/fonts/roboto-bold-webfont.woff) format('woff');
+  font-weight: 700;
+}
+@font-face {
+  font-family: Roboto;
+  src: url(../assets/fonts/roboto-regular-webfont.woff2) format('woff2'),
+       url(../assets/fonts/roboto-regular-webfont.woff) format('woff');
+  font-weight: 400;
+}
+
 body {
   font-family: Roboto, sans-serif;
 }
