--- a/styles/main.css
+++ b/styles/main.css
@@ -67,6 +67,7 @@ form input {
   .info-container h1 {
     font-size: 2.5rem;
   }
+
   .succes-card h1 {
     font-size: 2.5rem;
   }
@@ -84,7 +85,7 @@ form input {
 }
 
 body {
-  background-color: hsl(234, 29%, 20%);
+  background-color: #242742;
 }
 
 .container {
@@ -98,7 +99,7 @@ body {
 
 .card {
   width: 928px;
-  background-color: hsl(0, 0%, 100%);
+  background-color: white;
   display: flex;
   margin: auto;
   padding: 24px 24px 24px 64px;
@@ -109,7 +110,7 @@ body {
 }
 
 .info-container {
-  color: hsl(234, 29%, 20%);
+  color: #242742;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -151,28 +152,28 @@ form {
 form input {
   padding: 18px 0px 18px 24px;
   border-radius: 7px;
-  border: 1px solid hsl(231, 7%, 60%);
+  border: 1px solid #9294a0;
   margin-bottom: 24px;
 }
 form button {
   padding: 20px 60px 20px 60px;
-  background-color: hsl(234, 29%, 20%);
-  color: hsl(0, 0%, 100%);
+  background-color: #242742;
+  color: white;
   border: none;
   border-radius: 10px;
 }
 form button:hover {
   background: linear-gradient(270deg, #FF693E 0%, rgba(255, 105, 62, 0) 100%), #FF5478;
-  transition: 0.3s;
+  transition: .3s;
   box-shadow: 0px 5px 20px #FF5478;
 }
 
 .error {
-  color: hsl(4, 100%, 67%);
+  color: #ff6257;
 }
 
 .err-input {
-  border: 1px solid hsl(4, 100%, 67%) !important;
+  border: 1px solid #ff6257 !important;
   background-color: #FFE8E6;
 }
 
@@ -186,14 +187,14 @@ form button:hover {
 }
 
 .succes-card {
-  background-color: hsl(0, 0%, 100%);
+  background-color: white;
   width: 504px;
   margin: auto;
   display: flex;
   flex-direction: column;
   padding: 48px 64px 64px 64px;
   box-sizing: border-box;
-  color: hsl(234, 29%, 20%);
+  color: #242742;
   border-radius: 30px;
 }
 .succes-card h1 {
@@ -204,15 +205,15 @@ form button:hover {
 }
 .succes-card button {
   padding: 18px 72px;
-  background-color: hsl(234, 29%, 20%);
-  color: hsl(0, 0%, 100%);
+  background-color: #242742;
+  color: white;
   border: none;
   border-radius: 10px;
-  transition: 0.3s;
+  transition: .3s;
 }
 .succes-card button:hover {
   background: linear-gradient(270deg, #FF693E 0%, rgba(255, 105, 62, 0) 100%), #FF5478;
-  transition: 0.3s;
+  transition: .3s;
   box-shadow: 0px 5px 20px #FF5478;
 }
 
@@ -234,6 +235,7 @@ form button:hover {
   .info-container h1 {
     margin-top: 0;
   }
+
   .image {
     height: 600px;
     width: 400px;
@@ -247,6 +249,7 @@ form button:hover {
     padding: 24px;
     max-width: 500px;
   }
+
   .info-container {
     width: 100%;
     margin: 0;
@@ -257,6 +260,7 @@ form button:hover {
   .info-container ul {
     margin-bottom: 16px;
   }
+
   .image {
     background-image: url(../assets/images/illustration-sign-up-mobile.svg);
     width: 100%;
@@ -269,6 +273,7 @@ form button:hover {
   .image {
     height: 200px;
   }
+
   .succes-card {
     max-width: 300px;
     padding: 24px 32px 32px 24px;
@@ -283,17 +288,20 @@ form button:hover {
     margin: auto;
     height: 100%;
   }
+
   .card {
     padding: 0;
     margin: 0;
     border-radius: 0;
     justify-content: flex-end;
   }
+
   .image {
     width: 100%;
     height: 284px;
     border-radius: 0 0 20px 20px;
   }
+
   .info-container {
     width: calc(100% - 44px);
     margin: 0;
@@ -305,9 +313,11 @@ form button:hover {
   .info-container ul {
     margin-bottom: 16px;
   }
+
   form button {
     padding: 20px 48px 20px 48px;
   }
+
   .succes-card {
     max-width: 100vw;
     height: 100vh;
@@ -324,4 +334,6 @@ form button:hover {
   .succes-card button {
     margin-top: auto;
   }
-}/*# sourceMappingURL=main.css.map */
+}
+
+/*# sourceMappingURL=main.css.map */
